--- a/io-Dorobek/View/MainWindow.xaml
+++ b/io-Dorobek/View/MainWindow.xaml
@@ -23,12 +23,18 @@
             <Setter Property="VerticalAlignment"  Value="Center"/>
             <Setter Property="FontWeight" Value="Bold"/>
         </Style>
+        
+        <Style TargetType="{x:Type DataGridColumnHeader}">
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+        </Style>
+       
     </Window.Resources>
+   
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
-            <RowDefinition Height="50"/>
             <RowDefinition Height="8*"/>
         </Grid.RowDefinitions>
 
@@ -86,35 +92,28 @@
         </Grid>
 
         <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="5*"/>
-                <ColumnDefinition Width="3*"/>
-                <ColumnDefinition Width="3*"/>
-                <ColumnDefinition Width="3*"/>
-            </Grid.ColumnDefinitions>
-
-            <TextBlock Grid.Row="1" Grid.Column="1"
-                     Text="Tytuł"
-                     />
             
-            <TextBlock Grid.Row="1" Grid.Column="2"
-                     Text="Autorzy"
-                     />
             
-            <TextBlock Grid.Row="1" Grid.Column="3"
-                     Text="Data Publikacji"
-                     />
-            <TextBlock Grid.Row="1" Grid.Column="4"
-                     Text="DOI"
-                     />
-        </Grid>
+            <DataGrid x:Name="DataGrid"  ItemsSource="{Binding Pozycje}"  AutoGenerateColumns="False" CanUserAddRows="false" IsReadOnly="True">
+                
+                <DataGrid.Columns>
 
-        <Grid Grid.Row="2">
-            <ListBox Grid.Row="2"
-                      x:Name="CheckBox"
-                        ItemsSource="{Binding Path=Pozycje}"
-                      />
+                <DataGridTextColumn Header="Tytuł"
+                                    Width="14*"                   
+                                    Binding="{Binding Title}" />
+                <DataGridTextColumn Header="Autorzy"
+                                    Width="8*"
+                                    Binding="{Binding Author}" />
+                <DataGridTextColumn Header="Data publikacji"
+                                    Width="4*"
+                                    Binding="{Binding Year}"/>
+                <DataGridTextColumn Header="DOI" 
+                                    Width="4*"
+                                    Binding="{Binding DOI}"/>
+
+                </DataGrid.Columns>
+            </DataGrid>
+            
         </Grid>
 
     </Grid>
