--- a/io-Dorobek/View/AddPublicationView.xaml
+++ b/io-Dorobek/View/AddPublicationView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="io_Dorobek.View.Window2"
+﻿<Window x:Class="io_Dorobek.View.AddPublicationView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,13 +6,10 @@
         xmlns:local="clr-namespace:io_Dorobek.View"
         xmlns:vm="clr-namespace:io_Dorobek.ViewModel"
         mc:Ignorable="d"
-        Title="Edytuj pozycję" Height="450" Width="600"
+        Title="Dodaj pozycję" Height="450" Width="600"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize">
-    
-    <Window.DataContext>
-        <vm:MainViewModel x:Name="vm"/>
-    </Window.DataContext>
+
 
     <Window.Resources>
         <Style TargetType="Button">
@@ -46,83 +43,95 @@
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
- 
+
+        <Button Grid.Row="0" Grid.Column="0"
+                    x:Name="W1_button1"
+                    Content="Przeglądaj"
+                    Command="{Binding c_BrowseForPdf}"
+                />
+
+        <TextBlock Grid.Row="0" Grid.Column="1"
+                   Text="{Binding WybranaŚcieżka}"
+                   />
         
-        <TextBlock Grid.Row="0" Grid.Column="0"
+        <!--UWAGA: OneWay binding tylko chwilowo do czasu przystosowania aplikacji do TwoWay!!!-->
+        
+        <TextBlock Grid.Row="1" Grid.Column="0"
                    Text="Tytuł:"/>
 
-        <TextBox Grid.Row="0" Grid.Column="1"
-                 x:Name="W2_title"
-                 Text="{Binding W2_Title, Mode=TwoWay}"
-                 />
-
-        <TextBlock Grid.Row="1" Grid.Column="0"
-                   Text="Autorzy:"/>
-
         <TextBox Grid.Row="1" Grid.Column="1"
-                 x:Name="W2_author"
-                 Text="{Binding W2_Author, Mode=TwoWay}"
+                 x:Name="W1_title"
+                 Text="{Binding W1_Title, Mode=TwoWay}"
                  />
 
         <TextBlock Grid.Row="2" Grid.Column="0"
-                   Text="Data publikacji:"/>
+                   Text="Autorzy:"/>
 
         <TextBox Grid.Row="2" Grid.Column="1"
-                 x:Name="W2_publicationDate"
-                 Text="{Binding W2_PublicationDate, Mode=TwoWay}"
+                 x:Name="W1_author"
+                 Text="{Binding W1_Author, Mode=TwoWay}"
                  />
 
         <TextBlock Grid.Row="3" Grid.Column="0"
+                   Text="Data publikacji:"/>
+
+        <TextBox Grid.Row="3" Grid.Column="1"
+                 x:Name="W1_publicationDate"
+                 Text="{Binding W1_PublicationDate, Mode=TwoWay}"
+                 />
+
+        <TextBlock Grid.Row="4" Grid.Column="0"
                    Text="DOI:"
                    />
 
-        <TextBox Grid.Row="3" Grid.Column="1"
-                 x:Name="W2_DOI"
-                 Text="{Binding W2_DOI_VM, Mode=TwoWay}"/>
-
-        <TextBlock Grid.Row="4" Grid.Column="0"
-                   Text="ISBN dzieła lub dzieła nadrzędnego:"/>
-
         <TextBox Grid.Row="4" Grid.Column="1"
-                 x:Name="W2_isbnOfPaper"
-                 Text="{Binding W2_IsbnOfPaper, Mode=TwoWay}"/>
+                 x:Name="W1_DOI"
+                 Text="{Binding W1_DOI_VM, Mode=TwoWay}"/>
 
         <TextBlock Grid.Row="5" Grid.Column="0"
-                   Text="ISSN dzieła lub dzieła nadrzędnego:"/>
+                   Text="ISBN dzieła lub dzieła nadrzędnego:"/>
 
         <TextBox Grid.Row="5" Grid.Column="1"
-                 x:Name="W2_issnOfPaper"
-                 Text="{Binding W2_IssnOfPaper, Mode=TwoWay}"/>
+                 x:Name="W1_isbnOfPaper"
+                 Text="{Binding W1_IsbnOfPaper, Mode=TwoWay}"/>
 
         <TextBlock Grid.Row="6" Grid.Column="0"
-                   Text="Dzieło nadrzędne:"/>
+                   Text="ISSN dzieła lub dzieła nadrzędnego:"/>
 
         <TextBox Grid.Row="6" Grid.Column="1"
-                 x:Name="W2_articleName"
-                 Text="{Binding W2_ArticleName, Mode=TwoWay}"/>
+                 x:Name="W1_issnOfPaper"
+                 Text="{Binding W1_IssnOfPaper, Mode=TwoWay}"/>
 
         <TextBlock Grid.Row="7" Grid.Column="0"
-                   Text="Hasła kluczowe/słowa przedmiotowe:"/>
+                   Text="Dzieło nadrzędne:"/>
 
         <TextBox Grid.Row="7" Grid.Column="1"
-                 x:Name="W2_keyWords"
-                 Text="{Binding W2_KeyWords, Mode=TwoWay}"/>
-        
-        <Button Grid.Row="8" Grid.Column="0"
-                    x:Name="W2_button1"
-                    Content="Edytuj"/>
-            <!--Command="{Binding W2_Edytuj}"/>-->
-        
-        <Button Grid.Row="8" Grid.Column="1"
-                    x:Name="W2_button2"
+                 x:Name="W1_articleName"
+                 Text="{Binding W1_ArticleName, Mode=TwoWay}"/>
+
+        <TextBlock Grid.Row="8" Grid.Column="0"
+                   Text="Hasła kluczowe/słowa przedmiotowe:"/>
+
+        <TextBox Grid.Row="8" Grid.Column="1"
+                 x:Name="W1_keyWords"
+                 Text="{Binding W1_KeyWords, Mode=TwoWay}"/>
+
+        <Button Grid.Row="9" Grid.Column="0"
+                    x:Name="W1_button2"
+                    Content="Dodaj"
+                    Command="{Binding c_AddPublicationToDb}"/>
+
+        <Button Grid.Row="9" Grid.Column="1"
+                    x:Name="W1_button3"
                     Content="Anuluj"/>
-            <!--Command="{Binding W2_Anuluj}"/>-->
+            <!--Command="{Binding W1_Anuluj}"/>-->
         
     </Grid>
 </Window>
