--- a/io-Dorobek/View/AddPublicationView.xaml
+++ b/io-Dorobek/View/AddPublicationView.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:io_Dorobek.View"
         xmlns:vm="clr-namespace:io_Dorobek.ViewModel"
+        xmlns:interactivity="http://schemas.microsoft.com/expression/2010/interactivity"
         mc:Ignorable="d"
         Title="Dodaj pozycję" Height="450" Width="600"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize">
-
 
     <Window.Resources>
         <Style TargetType="Button">
@@ -44,11 +44,13 @@
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
         <Button Grid.Row="0" Grid.Column="0"
@@ -61,8 +63,7 @@
                    Text="{Binding WybranaŚcieżka}"
                    />
         
-        <!--UWAGA: OneWay binding tylko chwilowo do czasu przystosowania aplikacji do TwoWay!!!-->
-        
+
         <TextBlock Grid.Row="1" Grid.Column="0"
                    Text="Tytuł:"/>
 
@@ -70,6 +71,14 @@
                  x:Name="W1_title"
                  Text="{Binding W1_Title, Mode=TwoWay}"
                  />
+        <ComboBox Grid.Row="1" Grid.Column="2" x:Name="TitleCombo"
+                  ItemsSource="{Binding Titles, Mode=OneWay}">
+            <interactivity:Interaction.Triggers>
+                <interactivity:EventTrigger EventName="SelectionChanged">
+                    <interactivity:InvokeCommandAction Command="{Binding c_TitleSelection}" CommandParameter="{Binding ElementName=TitleCombo, Path=SelectedItem}"/>
+                </interactivity:EventTrigger>
+            </interactivity:Interaction.Triggers>
+        </ComboBox>
 
         <TextBlock Grid.Row="2" Grid.Column="0"
                    Text="Autorzy:"/>
@@ -78,7 +87,15 @@
                  x:Name="W1_author"
                  Text="{Binding W1_Author, Mode=TwoWay}"
                  />
-
+        <ComboBox Grid.Row="2" Grid.Column="2" x:Name="AuthorCombo"
+                  ItemsSource="{Binding Authors, Mode=OneWay}">
+            <interactivity:Interaction.Triggers>
+                <interactivity:EventTrigger EventName="SelectionChanged">
+                    <interactivity:InvokeCommandAction Command="{Binding c_AuthorSelection}" CommandParameter="{Binding ElementName=AuthorCombo, Path=SelectedItem}"/>
+                </interactivity:EventTrigger>
+            </interactivity:Interaction.Triggers>
+        </ComboBox>
+        
         <TextBlock Grid.Row="3" Grid.Column="0"
                    Text="Data publikacji:"/>
 
@@ -86,49 +103,113 @@
                  x:Name="W1_publicationDate"
                  Text="{Binding W1_PublicationDate, Mode=TwoWay}"
                  />
+        <ComboBox Grid.Row="3" Grid.Column="2" x:Name="DateCombo"
+                  ItemsSource="{Binding PublicationDates, Mode=OneWay}">
+            <interactivity:Interaction.Triggers>
+                <interactivity:EventTrigger EventName="SelectionChanged">
+                    <interactivity:InvokeCommandAction Command="{Binding c_DateSelection}" CommandParameter="{Binding ElementName=DateCombo, Path=SelectedItem}"/>
+                </interactivity:EventTrigger>
+            </interactivity:Interaction.Triggers>
+        </ComboBox>
 
         <TextBlock Grid.Row="4" Grid.Column="0"
+                   Text="Rok publikacji:"/>
+
+        <TextBox Grid.Row="4" Grid.Column="1"
+                 x:Name="W1_publicationYear"
+                 Text="{Binding W1_PublicationYear, Mode=TwoWay}"
+                 />
+        <ComboBox Grid.Row="4" Grid.Column="2" x:Name="YearCombo"
+                  ItemsSource="{Binding PublicationYears, Mode=OneWay}">
+            <interactivity:Interaction.Triggers>
+                <interactivity:EventTrigger EventName="SelectionChanged">
+                    <interactivity:InvokeCommandAction Command="{Binding c_YearSelection}" CommandParameter="{Binding ElementName=YearCombo, Path=SelectedItem}"/>
+                </interactivity:EventTrigger>
+            </interactivity:Interaction.Triggers>
+        </ComboBox>
+
+        <TextBlock Grid.Row="5" Grid.Column="0"
                    Text="DOI:"
                    />
 
-        <TextBox Grid.Row="4" Grid.Column="1"
+        <TextBox Grid.Row="5" Grid.Column="1"
                  x:Name="W1_DOI"
                  Text="{Binding W1_DOI_VM, Mode=TwoWay}"/>
-
-        <TextBlock Grid.Row="5" Grid.Column="0"
-                   Text="ISBN dzieła lub dzieła nadrzędnego:"/>
-
-        <TextBox Grid.Row="5" Grid.Column="1"
-                 x:Name="W1_isbnOfPaper"
-                 Text="{Binding W1_IsbnOfPaper, Mode=TwoWay}"/>
+        <ComboBox Grid.Row="5" Grid.Column="2" x:Name="DoiCombo"
+                  ItemsSource="{Binding Dois, Mode=OneWay}">
+            <interactivity:Interaction.Triggers>
+                <interactivity:EventTrigger EventName="SelectionChanged">
+                    <interactivity:InvokeCommandAction Command="{Binding c_DoiSelection}" CommandParameter="{Binding ElementName=DoiCombo, Path=SelectedItem}"/>
+                </interactivity:EventTrigger>
+            </interactivity:Interaction.Triggers>
+        </ComboBox>
 
         <TextBlock Grid.Row="6" Grid.Column="0"
-                   Text="ISSN dzieła lub dzieła nadrzędnego:"/>
+                   Text="ISBN dzieła lub dzieła nadrzędnego:"/>
 
         <TextBox Grid.Row="6" Grid.Column="1"
-                 x:Name="W1_issnOfPaper"
-                 Text="{Binding W1_IssnOfPaper, Mode=TwoWay}"/>
+                 x:Name="W1_isbnOfPaper"
+                 Text="{Binding W1_IsbnOfPaper, Mode=TwoWay}"/>
+        <ComboBox Grid.Row="6" Grid.Column="2" x:Name="IsbnCombo"
+                  ItemsSource="{Binding IsbnOfPaper, Mode=OneWay}">
+            <interactivity:Interaction.Triggers>
+                <interactivity:EventTrigger EventName="SelectionChanged">
+                    <interactivity:InvokeCommandAction Command="{Binding c_IsbnOfPaperSelection}" CommandParameter="{Binding ElementName=IsbnCombo, Path=SelectedItem}"/>
+                </interactivity:EventTrigger>
+            </interactivity:Interaction.Triggers>
+        </ComboBox>
 
         <TextBlock Grid.Row="7" Grid.Column="0"
-                   Text="Dzieło nadrzędne:"/>
+                   Text="ISSN dzieła lub dzieła nadrzędnego:"/>
 
         <TextBox Grid.Row="7" Grid.Column="1"
-                 x:Name="W1_articleName"
-                 Text="{Binding W1_ArticleName, Mode=TwoWay}"/>
+                 x:Name="W1_issnOfPaper"
+                 Text="{Binding W1_IssnOfPaper, Mode=TwoWay}"/>
+        <ComboBox Grid.Row="7" Grid.Column="2" x:Name="IssnCombo"
+                  ItemsSource="{Binding IssnOfPaper, Mode=OneWay}">
+            <interactivity:Interaction.Triggers>
+                <interactivity:EventTrigger EventName="SelectionChanged">
+                    <interactivity:InvokeCommandAction Command="{Binding c_IssnOfPaperSelection}" CommandParameter="{Binding ElementName=IssnCombo, Path=SelectedItem}"/>
+                </interactivity:EventTrigger>
+            </interactivity:Interaction.Triggers>
+        </ComboBox>
 
         <TextBlock Grid.Row="8" Grid.Column="0"
-                   Text="Hasła kluczowe/słowa przedmiotowe:"/>
+                   Text="Dzieło nadrzędne:"/>
 
         <TextBox Grid.Row="8" Grid.Column="1"
+                 x:Name="W1_articleName"
+                 Text="{Binding W1_ArticleName, Mode=TwoWay}"/>
+        <ComboBox Grid.Row="8" Grid.Column="2" x:Name="ArticleCombo"
+                  ItemsSource="{Binding IssnOfPaper, Mode=OneWay}">
+            <interactivity:Interaction.Triggers>
+                <interactivity:EventTrigger EventName="SelectionChanged">
+                    <interactivity:InvokeCommandAction Command="{Binding c_ArticleNameSelection}" CommandParameter="{Binding ElementName=ArticleCombo, Path=SelectedItem}"/>
+                </interactivity:EventTrigger>
+            </interactivity:Interaction.Triggers>
+        </ComboBox>
+
+        <TextBlock Grid.Row="9" Grid.Column="0"
+                   Text="Hasła kluczowe/słowa przedmiotowe:"/>
+
+        <TextBox Grid.Row="9" Grid.Column="1"
                  x:Name="W1_keyWords"
                  Text="{Binding W1_KeyWords, Mode=TwoWay}"/>
+        <ComboBox Grid.Row="9" Grid.Column="2" x:Name="KeywordsCombo"
+                  ItemsSource="{Binding IssnOfPaper, Mode=OneWay}">
+            <interactivity:Interaction.Triggers>
+                <interactivity:EventTrigger EventName="SelectionChanged">
+                    <interactivity:InvokeCommandAction Command="{Binding c_KeywordsSelection}" CommandParameter="{Binding ElementName=KeywordsCombo, Path=SelectedItem}"/>
+                </interactivity:EventTrigger>
+            </interactivity:Interaction.Triggers>
+        </ComboBox>
 
-        <Button Grid.Row="9" Grid.Column="0"
+        <Button Grid.Row="10" Grid.Column="0"
                     x:Name="W1_button2"
                     Content="Dodaj"
                     Command="{Binding c_AddPublicationToDb}"/>
 
-        <Button Grid.Row="9" Grid.Column="1"
+        <Button Grid.Row="10" Grid.Column="1"
                     x:Name="W1_button3"
                     Content="Anuluj"/>
             <!--Command="{Binding W1_Anuluj}"/>-->
